got carousel working, not sure why titles are having spacing issues

--- a/public/style.css
+++ b/public/style.css
@@ -16,3 +16,7 @@ h1{
     padding: 10px;
     
 }
+#infoBox{
+    background-color: rgba(219, 220, 235, 0.7);
+    color: black;
+}
